--- a/marvel/index.html
+++ b/marvel/index.html
@@ -7,60 +7,57 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,900|Montserrat:300,400,700,900|Muli|Poppins:400,600&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="normalize.css">
 <!--  <link rel="stylesheet" href="main.scss">-->
-	<link rel="stylesheet" href="main.scss">
+<!--	<link rel="stylesheet" href="main.scss">-->
 </head>
 	<body>
-		<div class="banner1 grid" style="background-image: url(image/marvel.png)">
+		<div class="banner1">
 			<div class="container">			
-				<h1 class="container"><strong>CREATIVE <br/>AND PROFESSIONAL</strong></h1>
-				<p>Use, by you or one client, in a single end product which end users are not charged for. Use, by you or one client, in a single <br/>end product which end users are not charged for.</p>
-				<button>
-				<div class="button">
-					<a>Contact Us</a>
-				</div>
-				</button>
-			</div>			
+				<h1 class="banner1-label"><strong>CREATIVE <br/>AND PROFESSIONAL</strong></h1>
+				<p class="text">Use, by you or one client, in a single end product which end users are not charged for. Use, by you or one client, in a single <br/>end product which end users are not charged for.</p>
+				<button class="button_us">Contact Us</button>						
+<!--
 			<div сlass="circle">o</div>
 			<div class="people"></div>
 			<div class="ellips_1">0</div>
+-->
 		</div>
 		<div class="logo">
 			<img src="image/logo.png">
 			<div class="menu  container">
-				<ul>
-					<li><a>HOME</a></li>            
-					<li><a>SERVICE</a></li>
-					<li><a>ABOUT</a></li>
-					<li><a>PROTFOLIO</a></li>
-					<li><a>PAGE</a></li>
-					<li><a>BLOG</a></li>
-					<li><a>CONTACT</a></li>
+				<ul class="logo-menu">
+					<li><a class="menu-list">HOME</a></li>            
+					<li><a class="menu-list">SERVICE</a></li>
+					<li><a class="menu-list">ABOUT</a></li>
+					<li><a class="menu-list">PROTFOLIO</a></li>
+					<li><a class="menu-list">PAGE</a></li>
+					<li><a class="menu-list">BLOG</a></li>
+					<li><a class="menu-list">CONTACT</a></li>
 				</ul>
 			</div>
 		</div>
-		<div class="banner2 grid" style="background-image: url(image/ipad.png) no-repeat">
-<!--
-			<img src="image/banner2/O.png">
-			<img src="image/banner2/ipad.png">
--->
-		<div class=" container">				
-			<h2>This is the one page polo</h2>
-			<p>About</p>
-			<p>Molestie ultricies quam. Donec at sem. Praesent pretium. Maorbi quis nulla vehicula felsd laoreet. Sed ullamcorper arcu ente. Sed tempus<br/> tempor cild  Nulla vierra ultrices magnal Nam rutrum congue diam.do eiusmod tempor incididunt ut dolore magna aliqua. Utdi eni ad minim<br/> veniam, quis nostrud exercitationconsequat. </p>
-			<button>More info</button>
-			<button>Join Expreance</button>
-		<ul>
+		<div class="banner2">
+			<div class="decoration"></div>			
+			<img src="image/ipad.png" class="banner2-phone">
+		<div class="container">				
+			<h2 class="section">This is the one page polo</h2>
+			<p class="pre-section">About</p>
+			<p class="banner2-text text">Molestie ultricies quam. Donec at sem. Praesent pretium. Maorbi quis nulla vehicula felsd laoreet. Sed ullamcorper arcu ente. Sed tempus<br/> tempor cild  Nulla vierra ultrices magnal Nam rutrum congue diam.do eiusmod tempor incididunt ut dolore magna aliqua. Utdi eni ad minim<br/> veniam, quis nostrud exercitationconsequat. </p>
+			<div class="banner2-button">
+				<button class="button">More info</button>
+				<button class="button">Join Expreance</button>
+			</div>
+		<ul class="banner2-col">
 			<li class="col1">
-				<img src="image/star.png">
+				<img src="image/star.png" class="banner2-img">
 				<p>Responsive Design</p>
 			</li>
 			<li class="col2">
-				<img src="image/ear.png">
+				<img src="image/ear.png" class="banner2-img">
 				<p><strong>Awesome Features </strong><br/>Lorem ipsum dolor sit amet, consectetur adipiscing elitelquam. Fusce quis nulla tincidunt interdum magna vitae.</p>
 <!--				<img src="image/banner2/O_banner4.png">-->
 			</li>
 			<li class="col3">
-				<img src="image/powerful%20security.png">
+				<img src="image/powerful%20security.png" class="banner2-img">
 				<p>Powerful Security</p>
 			</li>
 		</ul>
@@ -83,11 +80,11 @@
 		</div>
 		</div>
 		</div>
-		<div class="banner3 grid" style="background-image: url(image/light-lamp.png)">
+		<div class="banner3">
 <!--			<img src="image/banner3/light-lamp.png">-->
 			<div class="container">
-				<h4>Boost Your Website</h4>
-				<p>Responsive</p>
+				<h2 class="section">Boost Your Website</h2>
+				<p class="pre-section">Responsive</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etia fermentum vel libero eget interdum semper libero. </p>
 			<ul>
 				<li>Responsive Design & Retina Ready.</li>
@@ -97,77 +94,74 @@
 			</ul>
 				<button>Purchase</button>
 			</div>
-			<img src="image/banner3/banner3.png">
+			<img src="image/banner3.png">
 		</div>
-		<div class="banner4 grid" style="background-image: url(image/banner4.png)">
-<!--
-			<img src="image/banner4/The%20Landscaper%20%20%20Lawn%20%20%20Landscaping%20WP%20Theme%20Preview%20%20%20ThemeForest.png">
-			<img src="image/banner4/O.png">
--->
+		<div class="banner4">
+			<div class="banner4_cycle"></div>
 			<div class="container">
-				<img src="image/banner4/Layer%2011.png">
-				<h2>Who We Are</h2>
-				<p>Lorem ipsum dolor sit amet, consectetuer ux adipiscing elit, sed diam nonummy nibh and euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p> muli
+				<img src="image/Layer%2011.png" class="banner4-section">
+				<h1 class="banner4-section">Who We Are</h1>
+				<p class="text">Lorem ipsum dolor sit amet, consectetuer ux adipiscing elit, sed diam nonummy nibh and euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p> 
 				<button>More info</button>
 				<button>Join Expreance</button>
 			</div>
 		</div>
 		<div class="banner5 container">
 			<div>
-				<p>Features</p>
-				<h2>We're Creative Crafting With Love</h2>
+				<p class="pre-section">Features</p>
+				<h2 class="section">We're Creative Crafting With Love</h2>
 				<div>
-					<img src="image/banner5/1.png">
+					<img src="image/iteam1.png">
 					<h5>Powerful Security </h5>
 					<p>Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
 				</div>
 				<div>
-					<img src="image/banner5/2.png">
+					<img src="image/iteam2.png">
 					<h5>Creative Ideas</h5>
 					<p>Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
 				</div>
 				<div>
-					<img src="image/banner5/3.png">
+					<img src="image/iteam3.png">
 					<h5>Powerfull Admin Panel</h5>
 					<p>Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
 				</div>
 				<div>
-					<img src="image/banner5/4.png">
+					<img src="image/iteam4.png">
 					<h5>High Resolution Theme</h5>
 					<p>Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
 				</div>
 				<div>
-					<img src="image/banner5/5.png">
+					<img src="image/iteam5.png">
 					<h5>Awesome Interface</h5>
 					<p>Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
 				</div>
 				<div>
-					<img src="image/banner5/6.png">
+					<img src="image/iteam6.png">
 					<h5>Untimade Website Builder</h5>
 					<p>Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
 				</div>
 				<div>
-					<img src="image/banner5/7.png">
+					<img src="image/iteam7.png">
 					<h5>Responsive Theme</h5>
 					<p>Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
 				</div>
 				<div>
-					<img src="image/banner5/8.png">
+					<img src="image/iteam8.png">
 					<h5>CUSTOM CONTENT BLOCKS </h5>
 					<p>Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
 				</div>
 				<div>
-					<img src="image/banner5/9.png">
+					<img src="image/iteam9.png">
 					<h5>TRENDY DESIGN </h5>
 					<p>Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
 				</div>
 			</div>
 		</div>
 		<div class="banner6">
-			<img src="image/banner6/Base.png">
+			<img src="image/base_banner_6.png">
 			<div class="logo menu  container">
-				<h4>Our Protfolio</h4>
-				<p>Work</p>
+				<h2 class="section">Our Protfolio</h2>
+				<p class="pre-section">Work</p>
 				<ul>
 					<li>Business</li>
 					<li>Corporate</li>
@@ -176,55 +170,55 @@
 				</ul>
 			</div>
 			<div class="work">
-			<img src="image/banner6/photo1.png">
-			<img src="image/banner6/photo2.png">
-			<img src="image/banner6/photo3.png">
-			<img src="image/banner6/photo4.png">
-			<img src="image/banner6/photo5.png">
-			<img src="image/banner6/photo6.png">
-			<img src="image/banner6/photo7.png">
-			<img src="image/banner6/photo8.png">
+			<img src="image/photo1.png">
+			<img src="image/photo2.png">
+			<img src="image/photo3.png">
+			<img src="image/photo4.png">
+			<img src="image/photo5.png">
+			<img src="image/photo6.png">
+			<img src="image/photo7.png">
+			<img src="image/photo8.png">
 		</div>
 		</div>
 		<div class="banner7">
-			<h4>CLEAN IDEA AND UNIQUE DESIGN</h4>
-			<p>Service</p>
-			<img src="image/banner7/people.png">
-			<img src="image/banner7/O.png">
+			<h2 class="section">CLEAN IDEA AND UNIQUE DESIGN</h2>
+			<p class="pre-section">Service</p>
+			<img src="image/people_banner_7.png">
+			
 			<div class="support container">
 				<ul>
 					<li>
-						<img src="image/banner7/excellent.png">
+						<img src="image/excellent_banner_7.png">
 						<h5>Excellent Features</h5>
 						<p>Lorem ipsum doloar sit amet meconstur adipiscing.</p>
 					</li>
 					<li>
-						<img src="image/banner7/simple.png">
+						<img src="image/simple_banner_7.png">
 						<h5>Simple & Clean</h5>
 						<p>Lorem ipsum doloar sit amet meconstur adipiscing.</p>
 					</li>
 					<li>
-						<img src="image/banner7/parallax.png">
+						<img src="image/parallax_banner_7.png">
 						<h5>Parallax Effect</h5>
 						<p>Lorem ipsum doloar sit amet meconstur adipiscing.</p>
 					</li>
 					<li>
-						<img src="image/banner7/support.png">
+						<img src="image/support_banner_7.png">
 						<h5>24/7 Support</h5>
 						<p>Lorem ipsum doloar sit amet meconstur adipiscing.</p>
 					</li>
 				</ul>
 			</div>
 		</div>
-		<div class="banner8">
-			<img src="image/banner8/banner.png">
+		<div class="banner8" style="background-image: image/base_banner_8.png">
+			
 			<div class="container">
-			<h4>Choose your plan</h4>
-			<p>Pricing</p>
+			<h2 class="section">Choose your plan</h2>
+			<p class="pre-section">Pricing</p>
 			<button>Most Popular</button>
 			<div class="col1">
 				<ul>
-					<img src="image/banner8/col1.png">
+					<img src="image/col1_banner_8.png">
 					<p>Standard</p>
 					<p>$107/ MONTH</p>
 					<p>15 day free trial on all accounts</p>
@@ -240,7 +234,7 @@
 			</div>
 			<div class="col2">
 				<ul>
-					<img src="image/banner8/col2.png">
+					<img src="image/col2_banner_8.png">
 					<p>Premium</p>
 					<p>$433/ MONTH</p>
 					<p>15 day free trial on all accounts</p>
@@ -256,7 +250,7 @@
 			</div>
 			<div class="col3">
 				<ul>
-					<img src="image/banner8/col3.png">
+					<img src="image/col3_banner_8.png">
 					<p>Ultimate</p>
 					<p>$1233/ MONTH</p>
 					<p>15 day free trial on all accounts</p>
@@ -273,72 +267,72 @@
 			</div>
 		</div>
 		<div class="banner9 container">
-			<h4>Meet our team</h4>
-			<p>Expert</p>
+			<h2 class="section">Meet our team</h2>
+			<p class="pre-section">Expert</p>
 			<div class="col1">
-				<img src="image/banner9/col1.png">
-				<h6>Robert Willsom</h6>
+				<img src="image/col1_banner_9.png">
+				<h6 class="section">Robert Willsom</h6>
 				<p>web developer</p>
 				<div class="social_iteams">
 					<h6>Robert Willsom</h6>
 					<p>web developer</p>
 					<p>Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne illud appetere fabellas, ne quaeque nominati mea.</p>
-					<a><img src="image/banner9/twitter.png"></a>
-					<a><img src="image/banner9/in.png"></a>
-					<a><img src="image/banner9/fb.png"></a>
-					<a><img src="image/banner9/skype.png"></a>
-					<a><img src="image/banner9/prin.png"></a>
-					<a><img src="image/banner9/apple.png"></a>
+					<a><img src="image/twitter.png"></a>
+					<a><img src="image/in.png"></a>
+					<a><img src="image/fb.png"></a>
+					<a><img src="image/skype.png"></a>
+					<a><img src="image/prin.png"></a>
+					<a><img src="image/apple.png"></a>
 				</div>
 			</div>
 			<div class="col2">
-				<img src="image/banner9/col2.png">
-				<h6>Robert Willsom</h6>
+				<img src="image/col2_banner_9.png">
+				<h6 class="section">Robert Willsom</h6>
 				<p>web developer</p>
 				<div class="social_iteams">
 					<h6>Robert Willsom</h6>
 					<p>web developer</p>
 					<p>Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne illud appetere fabellas, ne quaeque nominati mea.</p>
-					<a><img src="image/banner9/twitter.png"></a>
-					<a><img src="image/banner9/in.png"></a>
-					<a><img src="image/banner9/fb.png"></a>
-					<a><img src="image/banner9/skype.png"></a>
-					<a><img src="image/banner9/prin.png"></a>
-					<a><img src="image/banner9/apple.png"></a>
+					<a><img src="image/twitter.png"></a>
+					<a><img src="image/in.png"></a>
+					<a><img src="image/fb.png"></a>
+					<a><img src="image/skype.png"></a>
+					<a><img src="image/prin.png"></a>
+					<a><img src="image/apple.png"></a>
 				</div>
 			</div>
 			<div class="col3">
-				<img src="image/banner9/col3.png">
-				<h6>Robert Willsom</h6>
+				<img src="image/col3_banner_9.png">
+				<h6 class="section">Robert Willsom</h6>
 				<p>web developer</p>
 				<div class="social_iteams">
 					<h6>Robert Willsom</h6>
 					<p>web developer</p>
 					<p>Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne illud appetere fabellas, ne quaeque nominati mea.</p>
-					<a><img src="image/banner9/twitter.png"></a>
-					<a><img src="image/banner9/in.png"></a>
-					<a><img src="image/banner9/fb.png"></a>
-					<a><img src="image/banner9/skype.png"></a>
-					<a><img src="image/banner9/prin.png"></a>
-					<a><img src="image/banner9/apple.png"></a>
+					<a><img src="image/twitter.png"></a>
+					<a><img src="image/in.png"></a>
+					<a><img src="image/fb.png"></a>
+					<a><img src="image/skype.png"></a>
+					<a><img src="image/prin.png"></a>
+					<a><img src="image/apple.png"></a>
 				</div>
 			</div>
 		</div>
 		<div class="banner10">
-			<img src="image/banner10/banner.png">
+			<img src="image/base_banner_10.png">
 			<div class="container">
-				<h4>Are You Impressed By Our Work?</h4>
+				<h2 class="section">Are You Impressed By Our Work?</h2>
 				<p>Durabitur commodo ras non urna mauris mollis auctor proin laoreet</p>
 				<button>PURCHASE NOW</button>
 				<button>GET IN TOUCH</button>
 			</div>
 		</div>
 		<div class="banner11 container">
-			<h4>Recent Blog post</h4>
-			<p>NEWS</p>
+			<h2 class="section">Recent Blog post</h2>
+			<p class="pre-section">NEWS</p>
 			<div class="news">
 				<div class="col1">
-					<img src="image/banner11/pic1.png">
+					<img src="image/pic1_banner_11.png">
 					<p>23 July 2016</p>
 					<h5>Single Image Post</h5>
 					<a>by Admin</a>
@@ -348,7 +342,7 @@
 					<button>read more</button>
 				</div>
 				<div class="col2">
-					<img src="image/banner11/pic2.png">
+					<img src="image/pic2_banner_11.png">
 					<p>23 July 2016</p>
 					<h5>gallery Image Post</h5>
 					<a>by Admin</a>
@@ -358,7 +352,7 @@
 					<button>read more</button>
 				</div>
 				<div class="col3">
-					<img src="image/banner11/pic3.png">
+					<img src="image/pic3_banner_11.png">
 					<p>23 July 2016</p>
 					<h5>Letest video Post </h5>
 					<a>by Admin</a>
@@ -368,7 +362,7 @@
 					<button>read more</button>
 				</div>
 				<div class="col4">
-					<img src="image/banner11/pic4.png">
+					<img src="image/pic4_banner_11.png">
 					<p>23 July 2016</p>
 					<h5>Single Image Post</h5>
 					<a>by Admin</a>
@@ -379,12 +373,12 @@
 				</div>
 			</div>
 		</div>
-		<div class="banner12">
-<!--			<img src="image/banner12_13/base.png">-->
+		<div class="banner12" >
+			
 			<div class="container">
-				<h4>Send us Message</h4>
-				<p>Contact</p>
-				<form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="POST" autocomplete="on">
+				<h2 class="section">Send us Message</h2>
+				<p class="pre-section">Contact</p>
+				<form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="POST" autocomplete="on" style="background-image: image/base_banner_12.png">
 					<p><input type="text" placeholder="Fast Name (Required)"></p>
 					<p><input type="text" placeholder="Email (Required)"></p>
 					<p><input type="text" placeholder="Last Name (Required)"></p>
@@ -395,27 +389,28 @@
 			</div>
 		</div>
 		<div class="banner13">
-			<img src="image/banner12_13/map.png">
-			<div class="container"><h4>Locate us on map</h4></div>
+			<img src="image/map.png">
+			<div class="container"><h2 class="section">Locate us on map</h2></div>
 		</div>
 		<div class="footer container">
 			<div class="col1">
-				<img src="image/footer/phone.png">
+				<img src="image/phone_footer.png">
 				<a>Phone : (999) 000-122-233</a>
 			</div>
 			<div class="col2">
-				<img src="image/footer/twi.png">
-				<img src="image/footer/in.png">
-				<img src="image/footer/fb.png">
-				<img src="image/footer/skype.png">
-				<img src="image/footer/pri.png">
-				<img src="image/footer/apple.png">
+				<img src="image/twitter_footer.png"/>
+				<img src="image/in_footer.png"/>
+				<img src="image/fb_footer.png"/>
+				<img src="image/skype_footer.png"/>
+				<img src="image/pri_footer.png"/>
+				<img src="image/apple_footer.png"/>
 			</div>
 			<div class="col3">
-				<img src="image/footer/9.png">
+				<img src="image/9_footer.png">
 				<p>123 state, South America, 205</p>
 			</div>
 		</div>
 		<footer class="container">All Rights Reserved © Themexpert 2016</footer>
+		</div>
 	</body>
 </html>
