--- a/marvel/index.html
+++ b/marvel/index.html
@@ -7,23 +7,28 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,900|Montserrat:300,400,700,900|Muli|Poppins:400,600&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="normalize.css">
 <!--  <link rel="stylesheet" href="main.scss">-->
-<!--	<link rel="stylesheet" href="main.scss">-->
+	<link rel="stylesheet" href="main.css">
 </head>
 	<body>
 		<div class="banner1">
-			<div class="container">			
-				<h1 class="banner1-label"><strong>CREATIVE <br/>AND PROFESSIONAL</strong></h1>
-				<p class="text">Use, by you or one client, in a single end product which end users are not charged for. Use, by you or one client, in a single <br/>end product which end users are not charged for.</p>
-				<button class="button_us">Contact Us</button>						
-<!--
-			<div сlass="circle">o</div>
-			<div class="people"></div>
-			<div class="ellips_1">0</div>
--->
-		</div>
+			<div class="container">
+			<div class="banner_right">				
+				<div class="circle circle_1"></div>
+				<div class="circle circle_2"></div>			
+				<img src="image/pic1.png" class="banner1_image">
+			</div>
+			<div class="banner_left">			
+				<h1 class="banner1-label">CREATIVE <br/>AND PROFESSIONAL</h1>
+				<div class="circle circle_0"></div>
+				<p class="text">Use, by you or one client, in a single end product which end users are not charged for. Use, by you or one client, in a single end product which end users are not charged for.</p>
+				<button class="button_contact"><a class="button">Contact Us</a></button>
+			</div>			
+			</div>
+		</div>					
+		
 		<div class="logo">
 			<img src="image/logo.png">
-			<div class="menu  container">
+			<nav class="menu  container">
 				<ul class="logo-menu">
 					<li><a class="menu-list">HOME</a></li>            
 					<li><a class="menu-list">SERVICE</a></li>
@@ -33,7 +38,7 @@
 					<li><a class="menu-list">BLOG</a></li>
 					<li><a class="menu-list">CONTACT</a></li>
 				</ul>
-			</div>
+			</nav>
 		</div>
 		<div class="banner2">
 			<div class="decoration"></div>			
@@ -157,8 +162,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="banner6">
-			<img src="image/base_banner_6.png">
+		<div class="banner6" style="background-image: image/base_banner_6.png">
 			<div class="logo menu  container">
 				<h2 class="section">Our Protfolio</h2>
 				<p class="pre-section">Work</p>
@@ -318,8 +322,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="banner10">
-			<img src="image/base_banner_10.png">
+		<div class="banner10" style="background-image: image/base_banner_10.png">			
 			<div class="container">
 				<h2 class="section">Are You Impressed By Our Work?</h2>
 				<p>Durabitur commodo ras non urna mauris mollis auctor proin laoreet</p>
@@ -411,6 +414,6 @@
 			</div>
 		</div>
 		<footer class="container">All Rights Reserved © Themexpert 2016</footer>
-		</div>
+		
 	</body>
 </html>
