--- a/marvel/index.html
+++ b/marvel/index.html
@@ -57,7 +57,7 @@
 				<h2><span>About</span>This is the one page polo</h2>
 			</div>
 			<div class="facility banner2_brief">
-				<p>Molestie ultricies quam. Donec at sem. Praesent pretium. Maorbi quis nulla vehicula felsd laoreet. Sed ullamcorper arcu ente. Sed tempus<br/> tempor cild  Nulla vierra ultrices magnal Nam rutrum congue diam.do eiusmod tempor incididunt ut dolore magna aliqua. Utdi eni ad minim<br/> veniam, quis nostrud exercitationconsequat. </p>
+				<p>Molestie ultricies quam. Donec at sem. Praesent pretium. Maorbi quis nulla vehicula felsd laoreet. Sed ullamcorper arcu ente. Sed tempus tempor cild  Nulla vierra ultrices magnal Nam rutrum congue diam.do eiusmod tempor incididunt ut dolore magna aliqua. Utdi eni ad minim veniam, quis nostrud exercitationconsequat. </p>
 			</div>
 			<div class="pressbutton">
 				<button class="pressbutton_key">More info</button>
@@ -69,7 +69,7 @@
 			<div class="circle circle_3"></div>
 				<img src="image/ipad.png" alt="" class="img2">
 			</div>
-			<div class="global decor design_decor">
+			<div class=" decor design_decor">
 				<div class="design_decor_col">
 				<div class="design_decor_star">
 					<img src="image/star.png" class="banner2-pic">
@@ -83,7 +83,7 @@
 				</div>
 			</div>
 
-			<div class="global decor design_decor">
+			<div class=" decor design_decor">
 				<div class="design_decor_col">
 				<div class="design_decor_star">
 					<img src="image/ear.png" class="banner2-pic">
@@ -97,7 +97,7 @@
 				</div>
 			</div>				
 			
-			<div class="global decor design_decor">
+			<div class=" decor design_decor">
 				<div class="design_decor_col">
 				<div class="design_decor_star">
 					<img src="image/powerful%20security.png" class="banner2-pic">
@@ -338,8 +338,8 @@
 					<div class="pix_hover">
         		<h5>Fullwidth Slideshow <b>- Fashion</b></h5>
 					<div class="pix_icons">
-						<a href="#" title="link"><img src="image/item_2_banner_6.png"></a>
-						<a href="#" title="search"><img src="image/item_1_banner_6.png"></a>
+						<a href="#"><img src="image/item_2_banner_6.png"></a>
+						<a href="#"><img src="image/item_1_banner_6.png"></a>
 					</div> 
 					</div>
 				</div>
@@ -350,8 +350,8 @@
 					<div class="pix_hover">
         		<h5>Fullwidth Slideshow <b>- Fashion</b></h5>
 					<div class="pix_icons">
-						<a href="#" title="link"><img src="image/item_2_banner_6.png"></a>
-						<a href="#" title="search"><img src="image/item_1_banner_6.png"></a>
+						<a href="#"><img src="image/item_2_banner_6.png"></a>
+						<a href="#"><img src="image/item_1_banner_6.png"></a>
 					</div> 
 					</div>
 				</div>
@@ -362,8 +362,8 @@
 					<div class="pix_hover">
         		<h5>Fullwidth Slideshow <b>- Fashion</b></h5>
 					<div class="pix_icons">
-						<a href="#" title="link"><img src="image/item_2_banner_6.png"></a>
-						<a href="#" title="search"><img src="image/item_1_banner_6.png"></a>
+						<a href="#"><img src="image/item_2_banner_6.png"></a>
+						<a href="#"><img src="image/item_1_banner_6.png"></a>
 					</div> 
 					</div>
 				</div>
@@ -374,8 +374,8 @@
 					<div class="pix_hover">
         		<h5>Fullwidth Slideshow <b>- Fashion</b></h5>
 					<div class="pix_icons">
-						<a href="#" title="link"><img src="image/item_2_banner_6.png"></a>
-						<a href="#" title="search"><img src="image/item_1_banner_6.png"></a>
+						<a href="#"><img src="image/item_2_banner_6.png"></a>
+						<a href="#"><img src="image/item_1_banner_6.png"></a>
 					</div> 
 					</div>
 				</div>
@@ -386,8 +386,8 @@
 					<div class="pix_hover">
         		<h5>Fullwidth Slideshow <b>- Fashion</b></h5>
 					<div class="pix_icons">
-						<a href="#" title="link"><img src="image/item_2_banner_6.png"></a>
-						<a href="#" title="search"><img src="image/item_1_banner_6.png"></a>
+						<a href="#"><img src="image/item_2_banner_6.png"></a>
+						<a href="#"><img src="image/item_1_banner_6.png"></a>
 					</div> 
 					</div>
 				</div>
@@ -398,8 +398,8 @@
 					<div class="pix_hover">
         		<h5>Fullwidth Slideshow <b>- Fashion</b></h5>
 					<div class="pix_icons">
-						<a href="#" title="link"><img src="image/item_2_banner_6.png"></a>
-						<a href="#" title="search"><img src="image/item_1_banner_6.png"></a>
+						<a href="#"><img src="image/item_2_banner_6.png"></a>
+						<a href="#"><img src="image/item_1_banner_6.png"></a>
 					</div> 
 					</div>
 				</div>
@@ -410,8 +410,8 @@
 					<div class="pix_hover">
         		<h5>Fullwidth Slideshow <b>- Fashion</b></h5>
 					<div class="pix_icons">
-						<a href="#" title="link"><img src="image/item_2_banner_6.png"></a>
-						<a href="#" title="search"><img src="image/item_1_banner_6.png"></a>
+						<a href="#"><img src="image/item_2_banner_6.png"></a>
+						<a href="#"><img src="image/item_1_banner_6.png"></a>
 					</div> 
 					</div>
 				</div>
@@ -422,8 +422,8 @@
 					<div class="pix_hover">
         		<h5>Fullwidth Slideshow <b>- Fashion</b></h5>
 					<div class="pix_icons">
-						<a href="#" title="link"><img src="image/item_2_banner_6.png"></a>
-						<a href="#" title="search"><img src="image/item_1_banner_6.png"></a>
+						<a href="#"><img src="image/item_2_banner_6.png"></a>
+						<a href="#"><img src="image/item_1_banner_6.png"></a>
 					</div> 
 					</div>
 				</div>
@@ -560,9 +560,11 @@
 				</div>
 			
 			<div class="global crew squady">
+			<div class="lower facility squady_item ">
 				<div class="lower_photo">
 					<img src="image/col1_banner_9.png">
 				</div>
+			
 				<div class="lower_brief">
 					<h6>Robert Willsom</h6>
 					<p>web developer</p>
@@ -573,13 +575,17 @@
 						<h6>web developer</h6>
 						<p>Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne illud appetere fabellas, ne quaeque nominati mea.</p>
 					</div>
-					<a><img src="image/twitter.png"></a>
-					<a><img src="image/in.png"></a>
-					<a><img src="image/fb.png"></a>
-					<a><img src="image/skype.png"></a>
-					<a><img src="image/prin.png"></a>
-					<a><img src="image/apple.png"></a>
+					<div class="hang_social">
+						<a href="#"><img src="image/twitter.png"></a>
+						<a href="#"><img src="image/in.png"></a>
+						<a href="#"><img src="image/fb.png"></a>
+						<a href="#"><img src="image/skype.png"></a>
+						<a href="#"><img src="image/prin.png"></a>
+						<a href="#"><img src="image/apple.png"></a>
+					</div>
 				</div>
+			</div>
+			<div class="facility squady_item lower">
 				<div class="lower_photo">
 					<img src="image/col2_banner_9.png">
 				</div>
@@ -593,13 +599,17 @@
 						<h6>web developer</h6>
 						<p>Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne illud appetere fabellas, ne quaeque nominati mea.</p>
 					</div>
-					<a><img src="image/twitter.png"></a>
-					<a><img src="image/in.png"></a>
-					<a><img src="image/fb.png"></a>
-					<a><img src="image/skype.png"></a>
-					<a><img src="image/prin.png"></a>
-					<a><img src="image/apple.png"></a>
+					<div class="hang_social">
+						<a><img src="image/twitter.png"></a>
+						<a><img src="image/in.png"></a>
+						<a><img src="image/fb.png"></a>
+						<a><img src="image/skype.png"></a>
+						<a><img src="image/prin.png"></a>
+						<a><img src="image/apple.png"></a>
+					</div>
 				</div>
+			</div>
+			<div class="facility squady_item lower">
 				<div class="lower_photo">
 					<img src="image/col3_banner_9.png">
 				</div>
@@ -613,16 +623,18 @@
 						<h6>web developer</h6>
 						<p>Lorem ipsum dolor sit amet, nemore latine graecis id est, omnium latine eu per. Has ne illud appetere fabellas, ne quaeque nominati mea.</p>
 					</div>
-					<a><img src="image/twitter.png"></a>
-					<a><img src="image/in.png"></a>
-					<a><img src="image/fb.png"></a>
-					<a><img src="image/skype.png"></a>
-					<a><img src="image/prin.png"></a>
-					<a><img src="image/apple.png"></a>
+					<div class="hang_social">
+						<a><img src="image/twitter.png"></a>
+						<a><img src="image/in.png"></a>
+						<a><img src="image/fb.png"></a>
+						<a><img src="image/skype.png"></a>
+						<a><img src="image/prin.png"></a>
+						<a><img src="image/apple.png"></a>
+					</div>
 				</div>
 			</div>
-			</div>
 		</div>
+			</div></div>
 		
 		<div class="banner10">			
 			<div class="container">
@@ -638,52 +650,73 @@
 		</div>
 		
 		<div class="banner11">
-		<div class="container">
-			<h2 class="section banner11_section"><span>NEWS</span>Recent Blog post</h2>
-				<div class="news">
-				<div class="new_col1 picture">
-					<img src="image/pic1_banner_11.png">
-					<p class="data">23 July 2016</p>
-					<h5>Single Image Post</h5>
-					<a>by Admin</a>
-					<a>in Logo</a>
-					<a>1 Comment</a>
-					<p>Lorem Ipsum is simply dummy text <br/> of the rinting and typesette industry<br/> lorem Ipsum has ...</p>
-					<button>read more</button>
+			<div class="container">
+				<div class="global joint">
+					<h2 class="facility banner11_full middle">
+						<span>NEWS</span>Recent Blog post
+					</h2>
 				</div>
-				<div class="new_col2 picture">
-					<img src="image/pic2_banner_11.png">
-					<p class="data">23 July 2016</p>
-					<h5>gallery Image Post</h5>
-					<a>by Admin</a>
-					<a>in Logo</a>
-					<a>1 Comment</a>
-					<p>Lorem Ipsum is simply dummy text <br/> of the rinting and typesette industry<br/> lorem Ipsum has ...</p>
-					<button>read more</button>
+				<div class="global banner11_new person">
+					<div class="facility famous great">
+						<div class="great_poster">
+							<time class="data">23 July 2016</time>
+								<img src="image/pic1_banner_11.png">
+						</div>
+						<h5 class="great_full">Single Image Post</h5>
+						<a class="great_note" href="#">by Admin</a>
+						<a class="great_note" href="#">in Logo</a>
+						<a class="great_note" href="#">1 Comment</a>
+						<p class="great_info">Lorem Ipsum is simply dummy text  of the rinting and typesette industry lorem Ipsum has ...</p>
+						<div class="great_button">
+							<a href="#">read more</a>
+						</div>
+					</div>
+					<div class="facility famous great">
+						<div class="great_poster">
+							<time class="data">23 July 2016</time>
+								<img src="image/pic2_banner_11.png">
+						</div>
+						<h5 class="great_full">Single Image Post</h5>
+						<a class="great_note" href="#">by Admin</a>
+						<a class="great_note" href="#">in Logo</a>
+						<a class="great_note" href="#">1 Comment</a>
+						<p class="great_info">Lorem Ipsum is simply dummy text  of the rinting and typesette industry lorem Ipsum has ...</p>
+						<div class="great_button">
+							<a href="#">read more</a>
+						</div>
+					</div>
+					<div class="facility famous great">
+						<div class="great_poster">
+							<time class="data">23 July 2016</time>
+								<img src="image/pic3_banner_11.png">
+						</div>
+						<h5 class="great_full">Single Image Post</h5>
+						<a class="great_note" href="#">by Admin</a>
+						<a class="great_note" href="#">in Logo</a>
+						<a class="great_note" href="#">1 Comment</a>
+						<p class="great_info">Lorem Ipsum is simply dummy text  of the rinting and typesette industry lorem Ipsum has ...</p>
+						<div class="great_button">
+							<a href="#">read more</a>
+						</div>
+					</div>
+					<div class="facility famous great">
+						<div class="great_poster">
+							<time class="data">23 July 2016</time>
+								<img src="image/pic4_banner_11.png">
+						</div>
+						<h5 class="great_full">Single Image Post</h5>
+						<a class="great_note" href="#">by Admin</a>
+						<a class="great_note" href="#">in Logo</a>
+						<a class="great_note" href="#">1 Comment</a>
+						<p class="great_info">Lorem Ipsum is simply dummy text of the rinting and typesette industry lorem Ipsum has ...</p>
+						<div class="great_button">
+							<a href="#">read more</a>
+						</div>
+					</div>
 				</div>
-				<div class="new_col3 picture">
-					<img src="image/pic3_banner_11.png">
-					<p class="data">23 July 2016</p>
-					<h5>Letest video Post </h5>
-					<a>by Admin</a>
-					<a>in Logo</a>
-					<a>1 Comment</a>
-					<p>Lorem Ipsum is simply dummy text <br/> of the rinting and typesette industry<br/> lorem Ipsum has ...</p>
-					<button>read more</button>
-				</div>
-				<div class="new_col4 picture">
-					<img src="image/pic4_banner_11.png">
-					<p class="data">23 July 2016</p>
-					<h5>Single Image Post</h5>
-					<a>by Admin</a>
-					<a>in Logo</a>
-					<a>1 Comment</a>
-					<p>Lorem Ipsum is simply dummy text <br/> of the rinting and typesette industry<br/> lorem Ipsum has ...</p>
-					<button>read more</button>
-				</div>
-			</div>
 			</div>
 		</div>
+		
 		<div class="banner12" >			
 			<div class="container">
     <div class="global joint">
