--- a/marvel/index.html
+++ b/marvel/index.html
@@ -34,7 +34,7 @@
 		<div class="logo">
 		<div class="container">
 		<div class="global">
-			 <a href="#home" title="Home" class="facility about">
+			 <a href="#home" title="=>" class="facility about">
 				<img src="image/logo.png">
 			</a>			
 			<nav class="facility menu">				
@@ -193,7 +193,7 @@
 					<div class="facility layer">
 						<a href="#home"><img src="image/Layer%2011.png" class="pic"></a>
 					</div>
-					<h2 class="banner4-section">Who We Are</h2>
+					<h2 class="banner4-section"><span>Who</span>Who We Are</h2>
 					<p>Lorem ipsum dolor sit amet, consectetuer ux adipiscing elit, sed diam nonummy nibh and euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam.</p> 
 					<div class="pressbutton">
 						<button class="pressbutton_key pressbutton_transparent">More info</button>
@@ -755,8 +755,8 @@
 		
 		<div class="banner13">
 			<div class="container">
-				<a class="map_banner">Locate us on map  </a>
-				<a class="map_banner" href="#"><img src="image/location_banner.png"></a>
+				<a class="map_banner" href="#banner13">Locate us on map  </a>
+				<a class="map_banner" href="https://goo.gl/maps/K2iVxVegWUJ2" target="_blank" title="Conewich"><img src="image/location_banner.png"></a>
 			</div>
 		</div>
 		
@@ -767,7 +767,7 @@
 			<div class="phone_footer phone">
 				<img src="image/phone_footer.png" >
 			</div>
-				<a class="tel">Phone : (999) 000-122-233</a>
+				<a href="tel:+999000122233" class="tel">Phone : (999) 000-122-233</a>
 			</div>
 			<div class="col2">
 				<a href="#"><img src="image/twitter_footer.png"/></a>
@@ -781,7 +781,7 @@
 				<div class="phone_footer phone">
 					<a><img src="image/9_footer.png"></a>
 				</div>
-				<a class="tel">123 state, South America, 205</a>
+				<a href="https://goo.gl/maps/VakWridcAWA2" target="_blank" class="tel">123 state, South America, 205</a>
 			</div>
 			</div>
 			</div>
