--- a/marvel/index.html
+++ b/marvel/index.html
@@ -546,8 +546,8 @@
 					<p> > 500 GB Cloud Storage</p>
 					<p> > Mobile Website and Store</p>
 					<p> > 24/7 Support</p>
-				</div>
-				<button><a href="#" class="banner8_button">Get Started Now</a></button>
+				
+				<button><a href="#" class="banner8_button">Get Started Now</a></button></div>
 				</div>
 				</div>
 			</div>
@@ -770,12 +770,12 @@
 				<a href="tel:+999000122233" class="tel">Phone : (999) 000-122-233</a>
 			</div>
 			<div class="col2">
-				<a href="#"><img src="image/twitter_footer.png"/></a>
-				<a href="#"><img src="image/in_footer.png"/></a>
-				<a href="#"><img src="image/fb_footer.png"/></a>
-				<a href="#"><img src="image/skype_footer.png"/></a>
-				<a href="#"><img src="image/pri_footer.png"/></a>
-				<a href="#"><img src="image/apple_footer.png"/></a>
+				<a href="#col2"><img class="social" src="image/twitter_footer.png"/></a>
+				<a href="#col2"><img class="social" src="image/in_footer.png"/></a>
+				<a href="#col2"><img class="social" src="image/fb_footer.png"/></a>
+				<a href="#col2"><img class="social" src="image/skype_footer.png"/></a>
+				<a href="#col2"><img class="social" src="image/pri_footer.png"/></a>
+				<a href="#col2"><img class="social" src="image/apple_footer.png"/></a>
 			</div>
 			<div class="facility footer-item footer-contact">
 				<div class="phone_footer phone">
